--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,10 +1,25 @@
 {
-  "name": "vite-plugin-imagemin",
-  "version": "0.6.1",
-  "description": "A vite plugin for compressing image assets",
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "name": "vuepress-plugin-imagemin",
+  "version": "0.0.0",
+  "description": "A VuePress plugin for compressing image assets",
+  "keywords": [
+    "vite",
+    "vuepress",
+    "vuepress-plugin",
+    "imagemin",
+    "vben"
+  ],
+  "homepage": "https://github.com/yjl9903/vuepress-plugin-imagemin/tree/master/#readme",
+  "bugs": {
+    "url": "https://github.com/yjl9903/vuepress-plugin-imagemin/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yjl9903/vuepress-plugin-imagemin",
+    "directory": "packages/core"
+  },
+  "license": "MIT",
+  "author": "Vben",
   "exports": {
     ".": {
       "require": "./dist/index.cjs",
@@ -12,32 +27,18 @@
       "types": "./dist/index.d.ts"
     }
   },
-  "license": "MIT",
-  "author": "Vben",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "pnpm unbuild --stub",
     "build": "pnpm unbuild",
-    "prepublishOnly": "npm run build",
-    "prepack": "pnpm unbuild"
+    "dev": "pnpm unbuild --stub",
+    "prepack": "pnpm unbuild",
+    "prepublishOnly": "npm run build"
   },
-  "keywords": [
-    "vite",
-    "vite-plugin",
-    "imagemin",
-    "vben"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/anncwb/vite-plugin-imagemin",
-    "directory": "packages/core"
-  },
-  "bugs": {
-    "url": "https://github.com/anncwb/vite-plugin-imagemin/issues"
-  },
-  "homepage": "https://github.com/anncwb/vite-plugin-imagemin/tree/master/#readme",
   "dependencies": {
     "@types/imagemin": "^7.0.1",
     "@types/imagemin-gifsicle": "^7.0.1",
@@ -63,18 +64,15 @@
     "jpegtran-bin": "^6.0.1",
     "pathe": "^0.2.0"
   },
-  "peerDependencies": {
-    "vite": ">=2.0.0"
-  },
-  "resolutions": {
-    "bin-wrapper": "npm:bin-wrapper-china",
-    "gifsicle": "5.2.0"
-  },
   "devDependencies": {
     "@types/chalk": "^2.2.0",
     "@types/debug": "^4.1.7",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.12",
-    "vite": "^2.7.13"
+    "vite": "^2.9.5",
+    "vuepress": "^2.0.0-beta.36"
+  },
+  "peerDependencies": {
+    "vuepress": ">=2.0.0-beta.36"
   }
 }
