--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "license": "MIT",
   "author": "Vben",
   "scripts": {
-    "build": "pnpm run build -C packages/core",
-    "build:play": "pnpm run build --filter playground-basic",
-    "dev:play": "pnpm run dev --filter playground-basic",
+    "build": "pnpm run build -C core",
+    "build:play": "pnpm run build -C playground",
+    "dev:play": "pnpm run dev -C playground",
     "lint:eslint": "eslint \"packages/**/*.{ts,tsx}\" --fix",
     "lint:pretty": "pretty-quick --staged",
     "log": "conventional-changelog -p angular -i CHANGELOG.md -s",
