--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/yjl9903/vuepress-plugin-imagemin"
   },
   "license": "MIT",
-  "author": "Vben",
+  "author": "XLor",
   "scripts": {
     "build": "pnpm run build -C core",
     "build:play": "pnpm run build -C playground",
