--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "description": "A VuePress plugin for compressing image assets",
   "keywords": [
@@ -26,7 +26,7 @@
     "lint:eslint": "eslint \"packages/**/*.{ts,tsx}\" --fix",
     "lint:pretty": "pretty-quick --staged",
     "log": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "release": "bumpp --commit --push --tag",
+    "release": "bumpp package.json core/package.json --commit --push --tag",
     "test": "vitest",
     "preversion": "pnpm build"
   },
