--- a/core/package.json
+++ b/core/package.json
@@ -34,20 +34,12 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm unbuild",
-    "dev": "pnpm unbuild --stub"
+    "build": "unbuild",
+    "dev": "unbuild --stub"
   },
   "dependencies": {
-    "@types/imagemin": "^7.0.1",
-    "@types/imagemin-gifsicle": "^7.0.1",
-    "@types/imagemin-jpegtran": "^5.0.1",
-    "@types/imagemin-mozjpeg": "^8.0.1",
-    "@types/imagemin-optipng": "^5.2.1",
-    "@types/imagemin-svgo": "^10.0.0",
-    "@types/imagemin-webp": "^7.0.0",
-    "@types/svgo": "^2.6.1",
-    "chalk": "^4.1.2",
-    "debug": "^4.3.3",
+    "chalk": "^5.2.0",
+    "debug": "^4.3.4",
     "esbuild": "^0.14.14",
     "fs-extra": "^10.0.0",
     "gifsicle": "5.2.0",
@@ -66,11 +58,21 @@
     "@types/chalk": "^2.2.0",
     "@types/debug": "^4.1.7",
     "@types/fs-extra": "^9.0.13",
+    "@types/imagemin": "^7.0.1",
+    "@types/imagemin-gifsicle": "^7.0.1",
+    "@types/imagemin-jpegtran": "^5.0.1",
+    "@types/imagemin-mozjpeg": "^8.0.1",
+    "@types/imagemin-optipng": "^5.2.1",
+    "@types/imagemin-svgo": "^10.0.0",
+    "@types/imagemin-webp": "^7.0.0",
     "@types/node": "^17.0.12",
-    "vite": "^2.8.6",
-    "vuepress": "^2.0.0-beta.36"
+    "@types/svgo": "^2.6.1",
+    "@vuepress/client": "^2.0.0-beta.60",
+    "vite": "^4.0.4",
+    "vue": "^3.2.45",
+    "vuepress": "^2.0.0-beta.60"
   },
   "peerDependencies": {
-    "vuepress": ">=2.0.0-beta.36"
+    "vuepress": ">=2.0.0-beta.60"
   }
 }
