--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@commitlint/config-conventional": "^16.0.0",
     "@types/html-minifier-terser": "^6.1.0",
     "@types/jsdom": "^16.2.14",
-    "@types/node": "^17.0.12",
+    "@types/node": "^22.13.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "commitizen": "^4.2.4",
@@ -59,6 +59,7 @@
     "eslint-plugin-html": "^6.2.0",
     "lint-staged": "^12.3.2",
     "rimraf": "^3.0.2",
+    "sass-embedded": "^1.85.1",
     "typescript": "^5.8.2",
     "unbuild": "^3.5.0",
     "vite": "^6.2.1",
