--- a/playground/package.json
+++ b/playground/package.json
@@ -6,7 +6,9 @@
     "dev": "vuepress dev"
   },
   "devDependencies": {
+    "@vuepress/bundler-vite": "^2.0.0-rc.20",
     "@vuepress/client": "^2.0.0-beta.60",
+    "@vuepress/theme-default": "2.0.0-rc.84",
     "vue": "^3.2.45",
     "vuepress": "^2.0.0-beta.60",
     "vuepress-plugin-imagemin": "workspace:*"
