chore: allow optipng-bin

--- a/package.json
+++ b/package.json
@@ -65,5 +65,10 @@
     "vite": "^6.2.1",
     "vitest": "^3.0.8"
   },
-  "packageManager": "pnpm@10.6.2"
+  "packageManager": "pnpm@10.6.2",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "optipng-bin"
+    ]
+  }
 }
